Revision: More performance optimizations